[package]
name = "byml-to-yaml"
version = "1.0.0-aarch64"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow_ext = "0.2.1"
roead = { version = "0.23.1", features = ["yaml"] }
xflags = "0.3.1"

[patch.crates-io]
ryml = { path = "ryml" }
